Fixed multiple issues; duplicate outputs, images not changing, align text, fix gaps, fixed images not showing &  created responsive changes for mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -129,6 +129,11 @@ button:hover {
     margin-bottom: 10px;
 }
 
+#results-container p {
+    display: flex;
+    align-items: center;
+}
+
 #message-1 {
     grid-column-start: 2;
     grid-row-start: 1;
@@ -177,6 +182,7 @@ button:hover {
     grid-row-start: 4;
     display: flex;
     justify-content: center;
+    max-height: 40px;
 }
 
 #message-5 {
@@ -205,18 +211,34 @@ button:hover {
 
 .wi {
     color: #936076;
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .wi-direction-up {
-    font-size: 100px;
+    font-size: 80px;
+}
+
+.wi-direction-down {
+    font-size: 80px;
 }
 
 .fa-map-pin {
     color: #936076;
-    font-size: 50px;
+    font-size: 45px;
 }
 
 #static-info {
     margin-left: 10px;
+}
+
+@media screen and (max-width: 800px) {
+    #results-container {
+    grid-column-gap: 20px;
+    }
+    .main-content {
+        width: 100%;
+    }
+    p {
+        font-size: 85%;
+    }
 }
